[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "audio-recorder"
version = "0.1.0"
description = "A recorder for http-based audio streams"
authors = ["Mara Schulke <mara.schulke@th-brandenburg.de>"]

[tool.poetry.scripts]
audio-recorder = "audio_recorder.audio_recorder:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
pydub = "^0.25.1"
