[package]
name = "device"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = "0.3"
base64 = "0.13"
async-h1 = "*"
http-types = "*"
async-std = { version = "1.1", features = ["attributes", "unstable"]}
async-tungstenite = { version = "0.8", features = ["async-std-runtime"] }
gstreamer = { version = "0.17", features = ["v1_16"] }
gstreamer-app = { version = "0.17", features = ["v1_16"] }
gstreamer-sdp = { version = "0.17", features = ["v1_16"] }
log = "0.4"
simple_logger = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "*"
