[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "snake"
version = "0.1.0"
description = "A snake implementation in python"
authors = ["Mara Schulke <mara.schulke@th-brandenburg.de>"]

[tool.poetry.scripts]
snake = "snake.snake:main"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5"
